--- a/pages/aboutmePage.html
+++ b/pages/aboutmePage.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/aboutmePage.css">
+    <link rel="stylesheet" href="assets/css/aboutmePage.css">
+<script src="assets/js/theme-switcher.js"></script>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,7 +18,7 @@
 </head>
 <body>
   <div class="navbar">
-    <a href="/pages/index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a href="/index.html"><i class="fa fa-fw fa-home"></i> Home</a>
     <a href="/pages/tutorials.html"><i class="fa fa-fw fa-lightbulb-o"></i> Tutorials</a>
     <a class="active"  href="/pages/aboutmePage.html" ><i class="fa fa-fw fa-user"></i> About Us</a>
     <a href="/pages/loginPage.html"><i class="fa fa-fw fa-sign-in"></i> Log In</a>
