--- a/pages/loginPage.html
+++ b/pages/loginPage.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In Page</title>
-    <link rel="stylesheet" href="../css/loginPage.css">
+    <link rel="stylesheet" href="assets/css/loginPage.css">
+    <script src="assets/js/theme-switcher.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
         <div class="navbar">
-            <a href="/pages/index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+            <a href="/index.html"><i class="fa fa-fw fa-home"></i> Home</a>
             <a href="/pages/tutorials.html" ><i class="fa fa-fw fa-lightbulb-o"></i> Tutorials</a>
             <a href="/pages/aboutmePage.html"><i class="fa fa-fw fa-user"></i> About Us</a>
             <a class="active" href="/pages/loginPage.html"><i class="fa fa-fw fa-sign-in"></i> Log In</a>
