--- a/pages/tutorialdetails.html
+++ b/pages/tutorialdetails.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutorial Details</title>
-    <link rel="stylesheet" href="/css/tutorialdetails.css">
+    <link rel="stylesheet" href="../assets/css/tutorialdetails.css">
 </head>
 <body>
     <div class="details-container">
